2008-01-23  Dan Williams  <dcbw@redhat.com>

	* src/applet-dialogs.c
	  src/applet-device-wireless.c
		- (applet_warning_dialog_show, other_wireless_activate_cb,
		   new_network_activate_cb): get the right behavior when faced with
			metacticy's focus stealing prevention; we really do want the key
			dialog to come up on top.  The issue is somewhat mitigated by the
			fact that any input won't really leak.

2008-01-21  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wired.c
		- (add_connection_items): s/disabled/carrier; flip meaning
		- (wired_add_menu_item): s/disabled/carrier; flip meaning.  It's more
			clear this way.  (gnome.org #511099)

2008-01-21  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-gsm.c
		- (gsm_new_auto_connection): actually add the GSM setting to the
			connection object so it's valid
		- (gsm_get_icon): use wwan_icon member

	* src/applet.c
	  src/applet.h
		- (get_device_class): handle CDMA mobile broadband cards
		- (applet_menu_item_activate_helper): remove wrong check for connection
			!= NULL; if the connectoin is NULL then a default one should be
			created instead
		- (sort_devices): ethernet first, GSM second, CDMA third, wireless fourth
		- (nma_icons_free, nma_icons_load, constructor): gsm_icon -> wwan_icon

	* src/utils/utils.c
		- (connection_valid_for_cdma): new function
		- (utils_connection_valid_for_device): handle CDMA mobile broadband cards

	* src/applet-device-cdma.c
	  src/applet-device-cdma.h
	  src/Makefile.am
		- Add CDMA mobile broadband card support

2008-01-20  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_add_devices, foo_device_added_cb,
		   applet_get_device_icon_for_state,
		   applet_settings_new_secrets_requested_cb): handle unknown device
			types

2008-01-19  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-gsm.c
		- (add_connection_items): new function; add each applicable connection
			as a menu item